<?xml version="1.0"?>
<package format="2">
  <name>arti_can_interface</name>
  <version>1.0.0</version>
  <description>This package contains a library to easily access the CAN bus</description>

  <maintainer email="c.muehlbacher@arti-robots.com">Clemens Mühlbacher</maintainer>

  <author email="a.buchegger@arti-robots.com">Alexander Buchegger</author>
  <author email="c.muehlbacher@arti-robots.com">Clemens Mühlbacher</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>arti_can_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <build_export_depend>arti_can_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>arti_can_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
  </export>
</package>
