<?xml version="1.0"?>
<package format="2">
  <name>arti_can_msgs</name>
  <version>1.0.0</version>
  <description>The package contains messages which allow the inspection of the CAN network</description>

  <maintainer email="c.muehlbacher@arti-robots.com">Clemens Mühlbacher</maintainer>

  <author email="a.buchegger@arti-robots.com">Alexander Buchegger</author>
  <author email="c.muehlbacher@arti-robots.com">Clemens Mühlbacher</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
